--- a/index.html
+++ b/index.html
@@ -5,59 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1만 시간의 법칙</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./Basic Resouce/css/style.css" />
   </head>
   <body>
-    <header>
-      <h1>
-        <img src="/Basic Resouce/img/title.png" alt="1만 시간의 법칙" />
-      </h1>
-    </header>
-    <main>
-      <section class="description">
-        <h2>1만 시간의 법칙이란</h2>
-        <p>“연습은 어제의 당신보다 당신을 더 낫게 만든다.”</p>
-        <p class="description-item">
-          1만 시간의 법칙은 어떤 분야의 전문가가 되기 위해서는 최소한 1만 시간의
-          훈련이 필요하다는 법칙이다.
+    <div class="wrapper">
+      <header class="main-header">
+        <h1 class="main-title">
+          <img
+            class="logo-img"
+            src="/Basic Resouce/img/title.png"
+            alt="1만 시간의 법칙"
+          />
+        </h1>
+      </header>
+      <main>
+        <section class="summary">
+          <div class="summary-wrapper">
+            <h2 class="ir">1만 시간의 법칙이란</h2>
+            <p class="summary-quote">
+              “연습은 어제의 당신보다 당신을 더 낫게 만든다.”
+            </p>
+            <p class="summary-item">
+              <strong>1만 시간의 법칙</strong>은 <br />
+              어떤 분야의 전문가가 되기 위해서는<br />
+              최소한 1만 시간의 훈련이 필요하다는 법칙이다.
+            </p>
+          </div>
+        </section>
+        <section class="calculation">
+          <h2 class="ir">1만 시간의 법칙 계산해보기</h2>
+          <section>
+            <h3>입력 칸</h3>
+            <div class="input-wrapper">
+              나는
+              <input type="text" />
+              전문가가 될 것이다. <br />
+              그래서 앞으로 매일 하루에 <input type="text" /> 시간씩 훈련할
+              것이다.
+            </div>
+            <button>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+          </section>
+          <section>
+            <h3>결과</h3>
+            당신은
+            <div>input value</div>
+            가 되기 위해서 <br />
+            대략
+            <div>result value</div>
+            일 이상 훈련하셔야 합니다! :)
+            <div>
+              <a href="#">훈련하러 가기 GO!GO!</a>
+              <button>공유하기</button>
+            </div>
+          </section>
+        </section>
+      </main>
+      <footer>
+        <h2>회사 정보 및 저작권에 대한 안내</h2>
+        <img src="/Basic Resouce/img/logo.png" alt="주식회사 위니브 로고" />
+        <p class="copyright">
+          본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br />
+          수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
         </p>
-      </section>
-      <section>
-        <h2>1만 시간의 법칙 계산해보기</h2>
-        <section>
-          <h3>입력 칸</h3>
-          <div class="input-wrapper">
-            나는
-            <input type="text" />
-            전문가가 될 것이다. <br />
-            그래서 앞으로 매일 하루에 <input type="text" /> 시간씩 훈련할
-            것이다.
-          </div>
-          <button>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
-        </section>
-        <section>
-          <h3>결과</h3>
-          당신은
-          <div>input value</div>
-          가 되기 위해서 <br />
-          대략
-          <div>result value</div>
-          일 이상 훈련하셔야 합니다! :)
-          <div>
-            <a href="#">훈련하러 가기 GO!GO!</a>
-            <button>공유하기</button>
-          </div>
-        </section>
-      </section>
-    </main>
-    <footer>
-      <h2>회사 정보 및 저작권에 대한 안내</h2>
-      <img src="/Basic Resouce/img/logo.png" alt="주식회사 위니브 로고" />
-      <p class="copyright">
-        본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br />
-        수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
-      </p>
-    </footer>
-    <div class="modal">모달창</div>
+      </footer>
+      <div class="modal">모달창</div>
+    </div>
   </body>
 </html>
