--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <footer id="footer">
         <div class="footer-wrapper">
           <h2 class="ir">회사 정보 및 저작권에 대한 안내</h2>
-          <img src="/Basic Resouce/img/logo.png" alt="주식회사 위니브 로고" />
+          <img src="./Basic Resouce/img/logo.png" alt="주식회사 위니브 로고" />
           <small>
             ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에
             있습니다.<br />
@@ -82,7 +82,16 @@
           </small>
         </div>
       </footer>
-      <div class="modal">모달창</div>
     </div>
+    <section class="modal hidden">
+      <div class="modal-wrapper">
+        <div class="modal-txt">
+          <h2>화이팅!!♥♥♥</h2>
+          <p>당신의 꿈을 응원합니다!</p>
+        </div>
+        <img src="./Basic Resouce/img/licat.png" alt="응원하는 라이캣" />
+        <button class="btn close">종료하고 진짜 훈련하러 가기 GO!GO!</button>
+      </div>
+    </section>
   </body>
 </html>
