✨ modal btn act

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1만 시간의 법칙</title>
     <link rel="stylesheet" href="./Basic Resouce/css/style.css" />
+    <script></script>
   </head>
   <body>
     <div class="wrapper">
@@ -83,7 +84,7 @@
         </div>
       </footer>
     </div>
-    <section class="modal hidden">
+    <section id="modal" class="hidden">
       <div class="modal-wrapper">
         <div class="modal-txt">
           <h2>화이팅!!♥♥♥</h2>
@@ -93,5 +94,6 @@
         <button class="btn close">종료하고 진짜 훈련하러 가기 GO!GO!</button>
       </div>
     </section>
+    <script src="./Basic Resouce/js/10000hours.js"></script>
   </body>
 </html>
