--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1만 시간의 법칙</title>
     <link rel="stylesheet" href="./Basic Resouce/css/style.css" />
-    <script></script>
+    <link rel="icon" href="./Basic Resouce/img/favicon.ico" />
   </head>
   <body>
     <div class="wrapper">
-      <header class="main-header">
+      <header id="header">
         <h1 class="main-title">
           <img
             class="logo-img"
@@ -19,7 +19,7 @@
           />
         </h1>
       </header>
-      <main>
+      <main id="main">
         <section class="summary">
           <div class="summary-wrapper">
             <h2 class="ir">1만 시간의 법칙이란</h2>
@@ -91,7 +91,9 @@
           <p>당신의 꿈을 응원합니다!</p>
         </div>
         <img src="./Basic Resouce/img/licat.png" alt="응원하는 라이캣" />
-        <button class="btn close">종료하고 진짜 훈련하러 가기 GO!GO!</button>
+        <button class="btn close">
+          <a href="#">종료하고 진짜 훈련하러 가기 GO!GO!</a>
+        </button>
       </div>
     </section>
     <script src="./Basic Resouce/js/10000hours.js"></script>
