🐛  bug fix : img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="main-title">
           <img
             class="logo-img"
-            src="/Basic Resouce/img/title.png"
+            src="./Basic Resouce/img/title.png"
             alt="1만 시간의 법칙"
           />
         </h1>
