--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1만 시간의 법칙</title>
-    <link rel="stylesheet" href="./Basic Resouce/css/style.css" />
-    <link rel="icon" href="./Basic Resouce/img/favicon.ico" />
+    <link rel="stylesheet" href="./Basic_Resouce/css/style.css" />
+    <link rel="icon" href="./Basic_Resouce/img/favicon.ico" />
   </head>
   <body>
     <div class="wrapper">
@@ -14,7 +14,7 @@
         <h1 class="main-title">
           <img
             class="logo-img"
-            src="./Basic Resouce/img/title.png"
+            src="./Basic_Resouce/img/title.png"
             alt="1만 시간의 법칙"
           />
         </h1>
@@ -75,7 +75,7 @@
       <footer id="footer">
         <div class="footer-wrapper">
           <h2 class="ir">회사 정보 및 저작권에 대한 안내</h2>
-          <img src="./Basic Resouce/img/logo.png" alt="주식회사 위니브 로고" />
+          <img src="./Basic_Resouce/img/logo.png" alt="주식회사 위니브 로고" />
           <small>
             ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에
             있습니다.<br />
@@ -90,12 +90,10 @@
           <h2>화이팅!!♥♥♥</h2>
           <p>당신의 꿈을 응원합니다!</p>
         </div>
-        <img src="./Basic Resouce/img/licat.png" alt="응원하는 라이캣" />
-        <button class="btn close">
-          <a href="#">종료하고 진짜 훈련하러 가기 GO!GO!</a>
-        </button>
+        <img src="./Basic_Resouce/img/licat.png" alt="응원하는 라이캣" />
+        <a href="#" class="btn close">종료하고 진짜 훈련하러 가기 GO!GO!</a>
       </div>
     </section>
-    <script src="./Basic Resouce/js/10000hours.js"></script>
+    <script src="./Basic_Resouce/js/10000hours.js"></script>
   </body>
 </html>
