♿️ 모달창 웹 접근성

--- a/index.html
+++ b/index.html
@@ -84,10 +84,16 @@
         </div>
       </footer>
     </div>
-    <section id="modal" class="hidden">
+    <section
+      id="modal"
+      class="hidden"
+      role="dialog"
+      area-labelledby="cheerup"
+      aria-modal="true"
+    >
       <div class="modal-wrapper">
         <div class="modal-txt">
-          <h2>화이팅!!♥♥♥</h2>
+          <h2 id="cheerup">화이팅!!♥♥♥</h2>
           <p>당신의 꿈을 응원합니다!</p>
         </div>
         <img src="./Basic_Resouce/img/licat.png" alt="응원하는 라이캣" />
